--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,6 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #111;
-  font-family: sans-serif;
+  background-image: var(--background-gradient);
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  color: white;
 }
