--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,4 +2,4 @@
 @use 'base/initial-reset.scss';
 @use 'config/variables.scss';
 @use 'blocks/body.scss';
-@use 'blocks/card.scss'
+@use 'blocks/home.scss';
