--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -5,4 +5,5 @@ body {
   background-image: var(--background-gradient);
   font-family: 'Barlow Semi Condensed', sans-serif;
   color: white;
+  padding: 48px 0;
 }
