--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,4 +3,9 @@
 @use 'config/variables.scss';
 @use 'blocks/body.scss';
 @use 'blocks/home.scss';
-@use 'blocks/game.scss'
+@use 'blocks/game.scss';
+@use 'blocks/titles.scss';
+@use 'blocks/images.scss';
+@use 'blocks/simple.scss';
+@use 'blocks/score.scss';
+@use 'blocks/main.scss';
