--- a/src/scss/blocks/home.scss
+++ b/src/scss/blocks/home.scss
@@ -1,6 +1,24 @@
+@use '../mixins/responsive.scss' as *;
+.home-container{
+  padding: 20px;
+}
+
 .game-modes {
+  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5rem;
+  @include responsive (tablet){
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  &__item{
+    width: 250px;
+    height: 250px;
+    display: flex;
+    gap: 25px;
+    flex-direction: column;
+  }
 }
